Fix: header is not centered in Safari

--- a/public/css/singer-page.css
+++ b/public/css/singer-page.css
@@ -10,7 +10,7 @@ main {
 }
 
 h1 {
-    place-self: center;
+    text-align: center;
 }
 
 .headers {
