--- a/public/css/song-page.css
+++ b/public/css/song-page.css
@@ -7,7 +7,7 @@ main {
 }
 
 h1 {
-    place-self: center;
+    text-align: center;
 }
 
 .headers {
